changed user dtos and some logic inside services